fix flickering issues of scroll top button

--- a/frontend/src/components/NameList/NameList.module.css
+++ b/frontend/src/components/NameList/NameList.module.css
@@ -113,6 +113,12 @@
   bottom: 20px;
   right: 20px;
   z-index: 10;
+  cursor: pointer;
+  padding: 0;
+  border: none;
+}
+
+.scrollTopBtnContents {
   background-color: white;
   border: 1px solid hsl(0, 0%, 70%);
   border-radius: 8px;
@@ -122,19 +128,19 @@
   gap: 6px;
   color: hsl(0, 0%, 20%);
   font-size: 14px;
-  cursor: pointer;
   box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
 }
 
-.scrollTopBtn:hover {
+.scrollTopBtn:hover .scrollTopBtnContents {
   animation: shift-up forwards 150ms;
   box-shadow: 5px 14px 9px hsl(0deg 0% 0% / 0.28);
 }
 
-.scrollTopBtn:active {
+.scrollTopBtn:active .scrollTopBtnContents {
   animation: shift-down forwards 50ms;
   box-shadow: 2px 4px 6px hsl(0deg 0% 0% / 0.48);
 }
+
 .upIcon {
   height: 18px;
   width: 18px;
